--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,16 @@
 <html>
 <head>
   <title>UsusApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <!-- LinkedIN API Framework  -->
+  <!-- https://developer.linkedin.com/documents/getting-started-javascript-api -->
+
+  <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+    api_key: 77hbzaeoi6qcng
+  </script>
+
 </head>
 <body>
 
