added auto login for LinkedIN API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <!-- https://developer.linkedin.com/documents/getting-started-javascript-api -->
 
   <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+
     api_key: 77hbzaeoi6qcng
+    authorize: true
   </script>
 
 </head>
