added validations to user model and has_secure_password

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,3 +4,5 @@
 <script type="in/Login">
   Hello, <?js= firstName ?> <?js= lastName ?>.
 </script>
+
+<a id="#register" href="/users/new">Sign Up!</a>
