--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,40 @@
 <h1> USUS </h1>
 <h2> The Skills to Strengths Emulator </h2>
 
-<script type="in/Login">
-  Hello, <?js= firstName ?> <?js= lastName ?>.
+<!-- // <script type="in/Login"> -->
+<!-- //   Hello, <?js= firstName ?> <?js= lastName ?>. -->
+<!-- // </script> -->
+
+
+<script type="IN/Login">
+<form action="/register.html">
+<p>Name: <input type="text" name="name" value="<?js= firstName ?> <?js= lastName ?>" /></p>
+<p>Password: <input type="password" name="password" /></p>
+<p>Password Confirmation: <input type="password" name="password_confirmation" /></p>
+<p>City: <input type="text" name="city" /></p>
+<p>State: <input type="text" name="state" /></p>
+<p>Zip: <input type="text" name="zip" /></p>
+<p>Current Position: <input type="text" name="current_position_title" /></p>
+<label>Employment Status:</label>
+  <select id = "employment_status">
+   <option value = "1"></option>
+   <option value = "2">full time</option>
+   <option value = "3">part time</option>
+   <option value = "4">self employed</option>
+   <option value = "5">currently looking</option>
+   <option value = "6">intern</option>
+  </select>
+<p>Company Name: <input type="text" name="company_name" /></p>
+<p>LinkedIn Profile Link: <input type="text" name="linkedin_profile_link" /></p>
+
+
+
+
+<input type="hidden" name="linkedin-id" value="<?js= id ?>" />
+<input type="submit" name="submit" value="Sign Up"/>
 </script>
 
-<a id="#register" href="/users/new">Sign Up!</a>
+<!-- NOTE: ADD PROFILE PIC -->
+
+<!--
+<a id="#register" href="/users/new">Sign Up!</a> -->
