cleaned up dropdown employment status menu

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,11 +15,12 @@
     <label>Employment Status:</label>
       <select id = "employment_status">
        <option value = "1"></option>
-       <option value = "2">full time</option>
-       <option value = "3">part time</option>
-       <option value = "4">self employed</option>
-       <option value = "5">currently looking</option>
-       <option value = "6">intern</option>
+       <option value = "2">Full-Time</option>
+       <option value = "3">Part-Time</option>
+       <option value = "4">Self-Employed</option>
+       <option value = "5">Currently Looking</option>
+       <option value = "6">Intern</option>
+       <option value = "7">Other</option>
       </select>
     <p>Company Name: <input type="text" name="company_name" /></p>
     <p>LinkedIn Profile Link: <input type="text" name="linkedin_profile_link" /></p>
