--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,39 @@
- <!-- Form_for version of new user regisration form that currently appears on welcome#index -->
- <!-- If time permits, refactor html form with rails form helper below -->
- <!-- Blocker: unable to auto-populate form fields with LinkedIN API autocomplete instead the text string is rendered -->
+<p> Complete the form below to get started with USUS! </p>
 
- <script type="IN/Login" >
-  <%= form_for(@user, :url => {:action => "create"}) do |f| %>
-      <%= f.label(:name, "Name:") %>
-      <%= f.text_field :name, value:"<?js= firstName ?> <?js= lastName ?>"%>
-      <br><%= f.label(:email, "Email:") %>
-      <%= f.text_field :email %>
-      <br><%= f.label(:password, "Password:") %>
-      <%= f.password_field :password %>
-      <br><%= f.label(:password_confirmation, "password_confirmation") %>
-      <%= f.password_field :password_confirmation %>
-      <br><%= f.label(:city, "City:") %>
-      <%= f.text_field :city %>
-      <br><%= f.label(:state, "State:") %>
-      <%= f.text_field :state %>
-      <br><%= f.label(:zip, "Zip:") %>
-      <%= f.text_field :zip %>
-      <br><%= f.label(:current_position_title, "Current Position Title:") %>
-      <%= f.text_field :current_position_title %>
-      <br><%= f.label(:employment_status, "Employment Status:") %>
-      <%= f.text_field :employment_status %>
-      <br><%= f.label(:company_name, "Company Name:") %>
-      <%= f.text_field :company_name %>
-      <%= f.hidden_field :member_id %>
-      <br><%= f.label(:linkedin_profile_link, "LinkedIN Profile Link:") %>
-      <%= f.text_field :linkedin_profile_link%>
-      <br><%= f.submit "Sign Up" %>
-    <% end %>
+ <script type="IN/Login">
+    <form action="/users" method="POST">
+      <input name="authenticity_token" value="<%= form_authenticity_token %>"
+      type="hidden"/>
+      <input type="hidden" name="user[profile_pic_url]" value="<?js= pictureUrl ?>"/>
+      <?js if (pictureUrl) { ?>
+      <img src="<?js= pictureUrl ?>"></img>
+      <?js } else { ?>
+      <p>Upload a photo, so we can see what you look like.</p>
+      <?js } ?>
+
+      <p>Name: <input type="text" name="user[name]" value="<?js= firstName ?> <?js= lastName ?>" /></p>
+      <p>Password: <input type="password" name="user[password]" /></p>
+      <p>Password Confirmation: <input type="password" name="user[password_confirmation]" /></p>
+      <p>City: <input type="text" name="user[city]" /></p>
+      <p>Email: <input type="text" name="user[email]"/></p>
+
+      <p>State: <input type="text" name="user[state]" /></p>
+      <p>Zip: <input type="text" name="user[zip]" /></p>
+      <p>Current Position: <input type="text" name="user[current_position_title]" /></p>
+      <label>Employment Status:</label>
+        <select id="employment_status" name="user[employment_status]">
+          <option value="None"></option>
+          <option value="Full-Time">Full-Time</option>
+          <option value="Part-Time">Part-Time</option>
+          <option value="Self-Employed">Self-Employed</option>
+          <option value="Currently Looking">Currently Looking</option>
+          <option value="Intern">Intern</option>
+          <option value="Other">Other</option>
+        </select>
+      <p>Company Name: <input type="text" name="user[company_name]" /></p>
+      <p>LinkedIn Profile Link: <input type="text" name="user[linkedin_profile_link]" /></p>
+      <input type="hidden" name="user[member_id]" value="<?js= id ?>"/>
+
+      <input type="submit" name="submit" value="Sign Up"/>
+    </form>
 </script>
