--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@search, :url => {:action => "create"}) do |f| %>
   <%= f.label(:position, "Position:") %>
   <%= f.text_field :position %>
-  <%= f.label(:industry, "Industry") %>
+  <%= f.label(:industry, "Industry:") %>
   <%= f.text_field :industry %>
 
   <br><%= f.label(:company, "Company:") %>
