continuing work on search results page

--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :industry %>
 
   <br><%= f.label(:company, "Company:") %>
-  <%= f.password_field :company %>
+  <%= f.text_field :company %>
   <br><%= f.label(:city, "City:") %>
   <%= f.text_field :city %>
   <br><%= f.label(:state, "State:") %>
