finalized SSL authentication.  Changed config.ru file, created certs folder.  we have client token in server.  TO DO:  pass server token to linkedin and receive token back.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
   <!-- LinkedIN API Framework  -->
   <!-- https://developer.linkedin.com/documents/getting-started-javascript-api -->
 
-  <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+  <script type="text/javascript" src="https://platform.linkedin.com/in.js">
 
     api_key: 77hbzaeoi6qcng
     authorize: true
+    credentials_cookie: true
+
   </script>
 
 </head>
