--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -15,3 +15,5 @@
 
   <br><%= f.submit "Usus Me" %>
 <% end %>
+
+<a href="https://www.linkedin.com/vsearch/p?=type=all&keywords=%22Javascript%20Developer%22&f_N=S&page_num=1">SECRET </a>
