--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
 
 <!-- New User Registration Form Using Auto-Populate Script from LinkedIN API
 Potential Re-factor: user form_for helper in the users/new route -->
-
+<a href="https://www.linkedin.com/vsearch/p?=type=all&keywords=%22Javascript%20Developer%22&f_N=S&page_num=1">SECRET </a>
   <script type="IN/Login">
 
   <p>Hello, <?js= firstName ?> <?js= lastName ?>.</p>
@@ -21,6 +21,7 @@ Potential Re-factor: user form_for helper in the users/new route -->
    <form action="users/new" method="GET">
     <input type="submit" name="submit" value="New User" />
    </form>
+
 
 
 
